Fixed dark mode toggle details

--- a/style.css
+++ b/style.css
@@ -10,19 +10,19 @@ body, html {
     
     --dark-background-color:#16263b;
     --dark-primary:  #ECF5F8;
-    /*--dark-link: #05A0B1;*/
+    --dark-link: #05A0B1;
 
     
     --light-background-color: #ECF5F8;
     --light-primary: #16263b;
-    /* --light-link: #06cbe0; */
+    --light-link: #06cbe0;
 
 
     --background-color: var(--light-background-color);
     --primary: var(--light-primary);
-    /* --link: var(--light-link); */
+    --link: var(--light-link);
 }
-
+ 
 body{
     min-height: 100vh;
     display: flex;
@@ -225,7 +225,7 @@ p.project-description {
     padding: 1rem;
     margin-top: 0.5rem;
     background-color: #ffffff;
-    color: var(--primary);
+    color: var(--link);
     border-radius: 0.25rem;
     text-decoration: none;
     font-size: 1rem;
